syntax = "proto3";

import "proto/conabit/englearn/common/session.proto";
import "proto/conabit/englearn/exercise/word_service.proto";

package conabit.englearn.exercise;

option go_package = "github.com/Conabit-Corp/EngLearn/proto/conabit/englearn/exercise";

service WordCollectionService{
    rpc CreateWordCollection(CreateWordCollectionRequest) returns (WordCollection) {}

    rpc UpdateWordCollection(CreateWordCollectionRequest) returns (WordCollection) {}

    rpc FindWordCollection(FindWordCollectionRequest) returns (WordCollection) {}
}

message WordCollection{
    string id = 1;
    string name = 2;
    string description = 3;
    repeated conabit.englearn.exercise.WordPair words = 4;
}

message CreateWordCollectionRequest{
    conabit.englearn.common.Session session = 1;
    WordCollection word_collection = 2;
}

message FindWordCollectionRequest{
    conabit.englearn.common.Session session = 1;
    string collection_id = 2; 
    string collection_name = 3;
}